Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2779

atscppapi: bug in AsyncTimer - cancel results in crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.0.0
    • CPP API
    • None

    Description

      FATAL: InkIOCoreAPI.cc:223: failed assert `sdk_sanity_check_mutex(mutexp) == TS_SUCCESS`
      /usr/bin/traffic_server - STACK TRACE:
      /usr/lib64/libtsutil.so.3(ink_fatal+0xc9)[0x7ffff7bb2c05]
      /usr/lib64/libtsutil.so.3(_ink_assert+0x3c)[0x7ffff7bb1c48]
      /usr/bin/traffic_server(_TSReleaseAssert+0x29)[0x4f41a7]
      /usr/bin/traffic_server(TSMutexLock+0x30)[0x50dcc1]
      /usr/lib/libatscppapi.so.1(_ZN9atscppapi10AsyncTimer6cancelEv+0x27)[0x7fffe9ae26b9]
      /usr/lib/libatscppapi.so.1(_ZN9atscppapi10AsyncTimerD1Ev+0x2d)[0x7fffe9ae27a3]
      /usr/lib/libatscppapi.so.1(_ZN9atscppapi10AsyncTimerD0Ev+0x18)[0x7fffe9ae2824]
      /home/mnilange/Projects/postbuffer/postbuffer.so(_ZN10PostBufferD1Ev+0x98)[0x7fffe9d14346]
      /home/mnilange/Projects/postbuffer/postbuffer.so(_ZN10PostBufferD0Ev+0x18)[0x7fffe9d144b6]
      /usr/lib/libatscppapi.so.1(+0x1ceca)[0x7fffe9ad1eca]

      Attachments

        Activity

          People

            briang Brian Geffon
            manjeshnilange Manjesh Nilange
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: