fix for TS-2779 (atscppapi: bug in AsyncTimer - cancel results in crash); This closes #77